--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,8 @@ jobs:
         
       - name: Build
         run: pnpm build
+        env:
+          NEXT_PUBLIC_BASE_PATH: /huballas-user-test
         
       - name: Setup Pages
         uses: actions/configure-pages@v4
