chore: new design

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.18",
     "echarts": "^6.0.0",
+    "immer": "^10.1.3",
     "next": "^15.5.0",
     "papaparse": "^5.5.3",
     "react": "^19.1.1",
