--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "^15.5.0",
     "papaparse": "^5.5.3",
     "react": "^19.1.1",
+    "react-aria-components": "^1.13.0",
     "react-dom": "^19.1.1",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
