--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.19.0+sha512.c9fc7236e92adf5c8af42fd5bf1612df99c2ceb62f27047032f4720b33f8eacdde311865e91c411f2774f618d82f320808ecb51718bfa82c060c4ba7c76a32b8",
+  "packageManager": "pnpm@10.24.0+sha512.01ff8ae71b4419903b65c60fb2dc9d34cf8bb6e06d03bde112ef38f7a34d6904c424ba66bea5cdcf12890230bf39f9580473140ed9c946fef328b6e5238a345a",
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.12",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.18",
     "echarts": "^6.0.0",
     "immer": "^10.1.3",
-    "next": "^15.5.0",
+    "next": "^15.5.7",
     "papaparse": "^5.5.3",
     "react": "^19.1.1",
     "react-aria-components": "^1.13.0",
@@ -33,10 +33,13 @@
     "@types/papaparse": "^5.3.16",
     "@types/react": "19.1.11",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.38.0",
+    "eslint": "^9.39.1",
     "eslint-config-next": "16.0.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.12",
     "typescript": "5.9.2"
+  },
+  "resolutions": {
+    "js-yaml": "4.1.1"
   }
 }
